FLUID-6008: fix contrast for H3 in #newsReleasesList.

--- a/demos/prefsFramework/css/main.css
+++ b/demos/prefsFramework/css/main.css
@@ -250,7 +250,7 @@ em {
 }
 
 #newsReleasesList h3 {
-    color:#00a0e1;
+    color:##0079ac;
     font-size: 1.4em;
 }
 
